@@ -90,6 +90,7 @@ public:
   bool updateOverwrite() const;
   const FetchRequest& request() const;
   QStringList optionalFields() const { return m_fields; }
+  QString uid() const { return m_uid; }
   /**
    * Starts a search, using a key and value. Calls search()
    */
@@ -157,6 +158,7 @@ private:
   MessageHandler* m_messager;
   QString m_configGroup;
   QStringList m_fields;
+  QString m_uid;
 };
 
   } // end namespace
