@@ -47,6 +47,7 @@
 #include "musicbrainzfetcher.h"
 #include "giantbombfetcher.h"
 #include "openlibraryfetcher.cpp"
+#include "multifetcher.cpp"
 
 /**
  * Ideally, I'd like these initializations to be in each cpp file for each collection type
@@ -80,4 +81,5 @@ Tellico::Fetch::FetcherInitializer::FetcherInitializer() {
   RegisterFetcher<Fetch::MusicBrainzFetcher> registerMB(MusicBrainz);
   RegisterFetcher<Fetch::GiantBombFetcher> registerBomb(GiantBomb);
   RegisterFetcher<Fetch::OpenLibraryFetcher> registerOpenLibrary(OpenLibrary);
+  RegisterFetcher<Fetch::MultiFetcher> registerMulti(Multiple);
 }
