@@ -100,6 +100,7 @@ void Manager::loadFetchers() {
       if(f) {
         m_fetchers.append(f);
         f->setMessageHandler(m_messager);
+        m_uidHash.insert(f->uid(), f);
       }
     }
     m_loadDefaults = false;
@@ -117,6 +118,10 @@ Tellico::Fetch::FetcherVec Manager::fetchers(int type_) {
     }
   }
   return vec;
+}
+
+Tellico::Fetch::Fetcher::Ptr Manager::fetcherByUid(const QString& uid_) {
+  return m_uidHash.contains(uid_) ? m_uidHash[uid_] : Fetcher::Ptr();
 }
 
 Tellico::Fetch::KeyMap Manager::keyMap(const QString& source_) const {
